Wed Mar 18 16:38:11 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/test_syslog.rb (TestSyslog#test_open): check
	  block parameter in block. [ruby-dev:38180]

Wed Mar 18 12:48:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (report_bug): rb_bug can be caused by extension
	  libraries.

Wed Mar 18 02:41:33 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (open_server_inaddr_any): fixed multiple network
	  families problem. a patch from Charl Matthee at [ruby-core:21033].

Tue Mar 17 21:42:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): creates .revision.time and passes
	  CHDIR to create prerequisite files.

Tue Mar 17 18:00:55 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (Enumerator#{each_,}{with_index,with_object}): Fix
	  a bug where any parameter but the first one is dropped even if
	  multiple values are yielded with. [Bug #1198]

Tue Mar 17 14:25:16 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb (Pathname#sub): set $~ in block.binding.
	  [ruby-dev:38173]

Tue Mar 17 13:48:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): added RUBY_COREDLL.

	* ext/dl/handle.c (rb_dlhandle_initialize): returns msvcrt if libc
	  or RUBY_COREDLL is given.  [ruby-core:22828]

Tue Mar 17 10:29:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c, dln.c, parse.y, re.c, ruby.c, sprintf.c, strftime.c,
	  string.c, util.c, variable.c: use strlcpy, memcpy and snprintf
	  instead of strcpy, strncpy and sprintf.

Mon Mar 16 17:15:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_win32.rb (Win32API): enclosed by DL::TestWin32.
	  [ruby-core:22827]

Mon Mar 16 16:37:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (eventloop_sleep, lib_eventloop_core),
	  (lib_watchdog_core): tv_usec is not time_t.

Mon Mar 16 12:30:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (REVISION_H): keeps timestamp of revision.h.